# AnimationProgrammingProject

./: .gitmodules  CMakeLists.txt  README.md  build.sh  configure.sh  main.cpp  run.sh
shaders/: crowd.vert  preskinned.vert  skinned.vert
src/: mat4.cpp  mat4.h  vec2.h  vec3.h  vec4.h
src/animation/: Blending.cpp  Clip.cpp  Clip.h  CrossFadeController.cpp  CrossFadeController.h  Crowd.cpp  Crowd.h  Frame.h  Mesh.cpp  Mesh.h  Pose.cpp  Pose.h  RearrangeBones.cpp  Skeleton.cpp  Skeleton.h  Track.cpp  Track.h  TransformTrack.cpp  TransformTrack.h
src/application/: Application.h  BasicApp.cpp  BasicApp.h  ChapterEightApp.cpp  ChapterEightApp.h  ChapterNinthApp.cpp  ChapterNinthApp.h  ChapterTenApp.cpp  ChapterTenApp.h  ChapterTenApp2.cpp  ChapterTenApp2.h  CurveApp.cpp  CurveApp.h  DebugApp.cpp  DebugApp.h  LearnOpenGLApp.cpp  LearnOpenGLApp.h  OwnChapterTen.cpp  OwnChapterTen.h  OwnNinthApp.cpp  OwnNinthApp.h
src/application/ch10/: ChapterTenApp.cpp  ChapterTenApp.h  ChapterTenApp2.cpp  ChapterTenApp2.h  OwnChapterTen.cpp  OwnChapterTen.h
src/application/ch11/: Sample01.cpp  Sample01.h  Sample02.cpp  Sample02.h  Sample03.cpp  Sample03.h
src/application/ch12/: Sample01.cpp  Sample01.h  Sample02.cpp  Sample02.h  Sample03.cpp  Sample03.h
src/application/ch13/: Sample01.cpp  Sample01.h  Sample02.cpp  Sample02.h  Sample03.cpp  Sample03.h
src/application/ch14/: Sample01.cpp  Sample01.h
src/application/ch15/: Sample01.cpp  Sample01.h
src/application/ch8/: ChapterEightApp.h
src/application/ch9/: ChapterNinthApp.cpp  ChapterNinthApp.h  OwnNinthApp.cpp  OwnNinthApp.h
src/ik/: CCDSolver.cpp  CCDSolver.h  FABRIKSolver.cpp  FABRIKSolver.h  IKLeg.h  Intersections.h
src/math/: DualQuaternion.cpp  DualQuaternion.h  quat.cpp
src/opengl/: AnimBaker.h  AnimTexture.cpp  AnimTexture.h  Attribute.cpp  Attribute.h  DebugDraw.cpp  DebugDraw.h  Draw.cpp  Draw.h  GLTFLoader.cpp  GLTFLoader.h  IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  Shader.h  Test.h  Texture.cpp  Texture.h  Uniform.cpp  Uniform.h  VertexArray.cpp  VertexArray.h
src/transform/: Transform.h
